2003-06-27  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: changed tokenizing in pj_init_plus() so that if
	a value has an exponent with a plus sign this won't trigger a brand
	new token.  See bug 355 in bugzilla.

2003-06-09  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_init.c: ensure start is initialized at the very beginning
	of the function to avoid crashes in case where the input arg list
	is empty.

2003-04-24  Frank Warmerdam  <warmerdam@pobox.com>

	* src/geod.c: Don't emit an error message after listing ellipsoids
	or units, as per request from Dan Jacobson.

2003-04-09  Frank Warmerdam  <warmerdam@pobox.com>

	* man/man1/{proj,cs2cs}.1: moved -m option from cs2cs.1 to
	proj.1 since it is only supported by proj.

	* nad/Makefile.am: added DESTDIR in three missing places as per
	bug report from Peter Galbraith - proj debian package manager.

2003-03-31  Frank Warmerdam  <warmerdam@pobox.com>

	* Prepare 4.4.7 Release.

	* nad/esri: incorporated Paul Ramsey's update.  ESRI specific 
	coordinate systems in nad/esri.extra.

	* nad/epsg: Regenerated with towgs84 parameters properly generated
	for non-greenwich prime meridians. 

	http://bugzilla.remotesensing.org/show_bug.cgi?id=304

2003-03-28  Frank Warmerdam  <warmerdam@pobox.com>

	* config.guess, config.sub: updated from 
	ftp://ftp.gnu.org/pub/gnu/config/ in order to resolve Debian build
	problems on MIPS architecture. 
	
	http://bugs.debian.org/cgi-bin/bugreport.cgi?archive=no&bug=186586

	* src/pj_datums.c: fixed ire65 definition to refer to mod_airy, not
	modif_airy as per:
	http://bugzilla.remotesensing.org/show_bug.cgi?id=312

2003-03-26  Frank Warmerdam  <warmerdam@pobox.com>

	* src/pj_transform.c: Added check that srcdefn->inv actually exists!

	Per http://mapserver.gis.umn.edu/bugs/show_bug.cgi?id=301

2003-03-25  Frank Warmerdam  <warmerdam@pobox.com>

	* src/cs2cs.c: modified so that -f formats are used for Z as well as
	x and y values.  